test/configCases/errors/import-missing/errors.js
"use strict";

module.exports = [[/Module not found/]];
